--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
     justify-content: space-evenly;
 }
 
-#reset {
+#reset, #changeSizeButton {
     padding: 0.4rem 1.2rem;
     border: 0.1rem solid #D4A373;
     border-radius: 0.3rem;
@@ -39,10 +39,31 @@ h1 {
     font-size: 1.2rem;
 }
 
-#reset:hover {
+#reset:hover, #changeSizeButton:hover {
     background-color: #dac69e;
     color: white;
     box-shadow: 0 0 0.4rem gray;
+}
+
+#sizeSelector {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.9rem
+}
+
+#sizeSelector > input {
+    display: block;
+    width: 8rem;
+}
+
+.error {
+    font-size: 1.0rem;
+    color: red;
+}
+
+#changeSizeButton {
+    padding: 0.4rem 2rem;
 }
 
 #tools, .board {
