--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    
 }
 
 #reset, #changeSizeButton {
@@ -49,7 +50,10 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.9rem
+    gap: 0.9rem;
+    border: 0.1rem solid #D4A373;
+    border-radius: 0.3rem;
+    padding: 0.8rem;
 }
 
 #sizeSelector > input {
