--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    
+    max-width: 10rem;
 }
 
 #reset, #changeSizeButton {
